--- a/index.css
+++ b/index.css
@@ -1,7 +1,46 @@
+body {
+  background: #2980b9;
+  color: #FFF;
+  font-family: Helvetica;
+  margin: 0;
+
+}
+
+.wrapper {
+  width: 960px;
+  margin: 0 auto;
+}
+
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+#h1 {
+  border: 10px solid black;
+  width: 80%;
+
+}
+
+#droppy {
+  height: 600px;
+}
+
 #tools {
+
   background-color: red;
+  height: 20%;
+  width: 200px;
+  margin-right: 10px;
+  float: left;
+
 }
 
 #board {
   background-color: pink;
+  height: 900px;
+  width: 750px;
+  float: left;
+
 }
