--- a/index.css
+++ b/index.css
@@ -1,21 +1,13 @@
-/*Connor Shabro, Valerie Remaker, Padma Gundapaneni*/
 body {
-  background: #2980b9;
-  color: #FFF;
-  font-family: Helvetica;
+  background: #ffc0c0;
+  color: white;
+  font-family: Helvetica, sans-serif;
   margin: 0;
-
+  text-align: center;
 }
 
-.wrapper {
-  width: 960px;
-  margin: 0 auto;
-}
-
-*, *:before, *:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+h1 {
+  margin: 0;
 }
 
 h2{
@@ -27,19 +19,17 @@ h2{
 }
 
 #tools {
-
-  background-color: red;
-  height: 20%;
-  width: 200px;
-  margin-right: 10px;
-  float: left;
-
+  align-self: center;
+  background-color: #ffc0c0;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 #board {
-  background-color: pink;
-  height: 900px;
-  width: 750px;
+  background-color: #dd5583;
+  width: 80%;
 }
 
 #flexy {
@@ -47,8 +37,40 @@ h2{
   flex-flow: row nowrap;
   justify-content: space-around;
   align-content: center;
+  margin-top: 30px;
 }
 
-h2{
+h2 {
   text-align: center;
+  padding-right: 10px;
+}
+
+#flexy h2 {
+  padding: 1px;
+}
+
+#badBoi {
+  display: flex;
+  flex-flow: row nowrap;
+  width: 100%;
+  justify-content: center;
+}
+
+input,
+a {
+  height: 30px;
+  align-self: center;
+  margin: 5px;
+}
+
+a {
+  background-color: lightblue;
+}
+
+#h1, #h2,  #h3, #h4, #h5, #h6,  #img, #p {
+  padding: 10px;
+  margin: 10px;
+  border: black solid 1px;
+  border-radius: 25%;
+  background-color: pink;
 }
